[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "echo21"
version = "1.0.1"
dependencies = [
  "colossus",
  "mpi4py"
]
requires-python = ">=3.8"
authors = [{name = "Shikhar Mittal", email = "shikhar.mittal4@gmail.com"}]
description = "Exploring the Cosmos with Hydrogen Observation"
readme = "README.rst"
license = {file = "LICENSE"}
keywords = ["cosmology","21-cm","global signal"]
classifiers = [
"License :: OSI Approved :: MIT License",
"Programming Language :: Python :: 3.8",
"Programming Language :: Python :: 3.9",
"Programming Language :: Python :: 3.10",
"Natural Language :: English",
"Operating System :: OS Independent",
"Topic :: Scientific/Engineering :: Astronomy"
]

[project.urls]
Repository = "https://github.com/shikharmittal04/echo21.git"
