[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "echo21"
version = "4.3.2"
dependencies = [
  "numpy",
  "scipy",
  "colossus",
  "mpi4py",
  "h5py",
  "pandas",
  "tqdm",
  "classy"
]
requires-python = ">=3.8"
authors = [{name = "Shikhar Mittal", email = "shikhar.mittal4@gmail.com"}]
description = "Exploring the Cosmos with Hydrogen Observation"
readme = "README.rst"
license = {file = "LICENSE"}
keywords = ["cosmology","21-cm","global signal"]
classifiers = [
"License :: OSI Approved :: MIT License",
"Programming Language :: Python :: 3.8",
"Programming Language :: Python :: 3.9",
"Programming Language :: Python :: 3.10",
"Natural Language :: English",
"Operating System :: OS Independent",
"Topic :: Scientific/Engineering :: Astronomy"
]

[project.urls]
Repository = "https://github.com/shikharmittal04/echo21.git"
Documentation = "https://echo21.readthedocs.io/en/latest/index.html"

[tool.hatch.build.targets.wheel]
packages = ["src/echo21"]